hphp/test/slow/readonly/basel.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Local y must be a value type.' in %s/basel.php:17
%A
